# js-squeeze

./: LICENSE  README.md  squeeze.cabal
app/: Main.hs
fixtures/: basic.js  basic.min.js
src/: AST-bad.hs  AST.hs  CodeGen.hs  Lexer.hs  Minifier.hs  Parser.hs  Walker.hs
src/Minifier/: EliminateDeadCode.hs  JoinConsecutiveVars.hs  MangleNames.hs
