name:                squeeze
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jtfell/js-squeeze#readme
license:             BSD3
license-file:        LICENSE
author:              Julian Fell
maintainer:          Julian Fell
copyright:           2017 Julian Fell
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , AST
                     , Parser
                     , CodeGen
                     , Minifier
  other-modules:       Minifier.EliminateDeadCode
                     , Minifier.JoinConsecutiveVars
                     , Minifier.MangleNames
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , containers
  default-language:    Haskell2010

executable squeeze-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , squeeze
                     , parsec
                     , text
  default-language:    Haskell2010

test-suite squeeze-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , squeeze
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jtfell/js-squeeze
